--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
-    "@material-ui/styles": "^4.10.0"
+    "@material-ui/styles": "^4.10.0",
+    "react-router": "^6.4.3",
+    "react-router-dom": "^6.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
